--- a/src/components/MoviesList/MoviseList.css
+++ b/src/components/MoviesList/MoviseList.css
@@ -7,58 +7,39 @@
 
 
 button {
-    padding: 15px 35px;
-    text-transform: uppercase;
-    text-decoration: none;
-    letter-spacing: 4px;
-    color: transparent;
-    border: 3px solid #ff0;
-    font-size: 14px;
-    position: relative;
-    font-family: inherit;
-    background: transparent;
+    background: linear-gradient(-45deg, #3f00b5, #9f69fe, #27c8b7, #3f00b5);
+    background-size: 800% 400%;
+    padding: 1em 2em;
+    display: inline-block;
+    border: none;
+    border-radius: 10px;
+    font-size: 17px;
+    font-weight: 700;
+    color: white;
+    transition: all .5s ease-in-out;
+    animation: gradient 10s infinite cubic-bezier(.62, .28, .23, .99) both;
    }
    
-   button::before {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #363636;
-    color: #ff0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.5s;
+   button:hover {
+    animation: gradient 3s infinite;
+    transform: scale(1.05);
    }
    
-   button:hover::before {
-    left: 100%;
-    transform: scale(0) rotateY(360deg);
-    opacity: 0;
+   button:active {
+    animation: gradient 3s infinite;
+    transform: scale(0.8);
    }
    
-   button::after {
-    content: "+";
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background-color: #363636;
-    color: #ff0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.5s;
-    transform: scale(0) rotateY(0deg);
-    opacity: 0;
-   }
+   @keyframes gradient {
+    0% {
+     background-position: 0% 50%;
+    }
    
-   button:hover::after {
-    left: 0;
-    transform: scale(1) rotateY(360deg);
-    opacity: 1;
-   }
+    50% {
+     background-position: 100% 50%;
+    }
    
+    100% {
+     background-position: 0% 50%;
+    }
+   }
